fix: доработка хтмл шаблонизатора добавлены итемы для улучшения брони дополнен фунцианал по вставке улучшения в броне

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,9 @@
         <configuration>
           <source>8</source>
           <target>8</target>
+          <excludes>
+            <exclude>data</exclude>
+          </excludes>
         </configuration>
       </plugin>
     </plugins>
